--- a/app/src/main/res/layout/activity_memes_rmaiden.xml
+++ b/app/src/main/res/layout/activity_memes_rmaiden.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,18 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="puravidabloobs2k16.memester.MemesRMaiden">
 
-    <view class="puravidabloobs2k16.memester.MemesRMaiden$MemeView"
-        android:id="@+id/meme_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@android:drawable/ic_menu_save"
-        android:id="@+id/save_button"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_centerInParent="true"
+        android:gravity="center|center_vertical"
+        android:layout_gravity="center|center_vertical"/>
 
-</FrameLayout>
+
+</RelativeLayout>
