--- a/app/src/main/res/layout/activity_memes_rmaiden.xml
+++ b/app/src/main/res/layout/activity_memes_rmaiden.xml
@@ -18,5 +18,13 @@
         android:gravity="center|center_vertical"
         android:layout_gravity="center|center_vertical"/>
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@android:drawable/ic_menu_save"
+        android:id="@+id/save_button"
+        android:layout_gravity="center_horizontal|bottom" />
+
 
 </RelativeLayout>
