--- a/app/src/main/res/layout/activity_memes_rmaiden.xml
+++ b/app/src/main/res/layout/activity_memes_rmaiden.xml
@@ -18,13 +18,14 @@
         android:gravity="center|center_vertical"
         android:layout_gravity="center|center_vertical"/>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <android.support.design.widget.FloatingActionButton
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/menu_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@android:drawable/ic_menu_save"
-        android:id="@+id/save_button"
-        android:layout_gravity="center_horizontal|bottom" />
-
+        android:layout_margin="16dp"
+        android:elevation="7dp"
+        android:layout_alignParentBottom="true"
+        android:src="@android:drawable/ic_menu_save" />
 
 </RelativeLayout>
